--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,39 @@
-set -g default-terminal "screen-256color"
+unbind C-b
+set -g prefix C-g
+
+set -g default-terminal 'screen-256color'
 
 source ~/.tmuxcolors-256.conf
+
+bind r source-file ~/.tmux.conf
+
+set -g base-index 0
+
+setw -g mode-keys vi
+
+unbind '"'
+unbind %
+unbind s
+bind s split-window -v
+bind S split-window -v -l 40
+bind v split-window -h
+bind V split-window -h -l 120
+
+unbind-key j
+unbind-key k
+unbind-key h
+unbind-key l
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key h select-pane -L
+bind-key l select-pane -R
+
+set -g status-utf8 on
+set -g status-bg black
+set -g status-fg white
+set -g status-interval 5
+set -g status-left-length 90
+set -g status-right-length 60
+set -g status-left '#[fg=Green]#(whoami)#[fg=White]@#[fg=blue]#(hostname -s) #[fg=Cyan]s-#S:w#I:p#P'
+set -g status-justify left
+set -g status-right '#[fg=white]%a %Y/%m/%d %R'
