--- a/tmux.conf
+++ b/tmux.conf
@@ -3,6 +3,8 @@ set -g prefix C-g
 
 set -g default-terminal 'screen-256color'
 
+set -s escape-time 0
+
 source ~/.tmuxcolors-256.conf
 
 bind r source-file ~/.tmux.conf
